# roi

./: .gitignore  CMakeLists.txt  README.md
01/src/: gen  monothr  parameters.cfg  results.csv  test10.txt  test100.txt  test15.txt  test200.txt
01/src/generator/: configurator.hpp  generator.cpp  generator.hpp  main.cpp
01/src/monothread/: bellman_ford.cpp  bellman_ford.hpp  configurator.hpp  dfs.cpp  dfs.hpp  dijkstra.hpp  extra_paths.hpp  graph.cpp  graph.hpp  main.cpp
02/multithread/: configurator.hpp  main.cpp  multithread.hpp
03/src/: configurator.hpp  main.cpp  mapreduce.hpp
test/: parameters.cfg
